crates/quasar-syntax/src/snapshots/quasar_syntax__parser__tests__snapshot_all_types_fixture.snap
---
source: crates/quasar-syntax/src/parser.rs
expression: prog
---
Program {
    uses: [],
    consts: [],
    directives: [
        Network {
            value: "testnet",
            span: Span {
                start: 39,
                end: 54,
                line: 2,
                col: 1,
            },
        },
        Source {
            value: "GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF",
            span: Span {
                start: 55,
                end: 119,
                line: 3,
                col: 1,
            },
        },
        Fee {
            value: 100000,
            span: Span {
                start: 120,
                end: 134,
                line: 4,
                col: 1,
            },
        },
        Timeout {
            value: 30,
            span: Span {
                start: 135,
                end: 145,
                line: 5,
                col: 1,
            },
        },
    ],
    calls: [
        Call {
            contract: "CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABSC4",
            method: "test_types",
            args: [
                Bool(
                    true,
                    Span {
                        start: 223,
                        end: 233,
                        line: 8,
                        col: 3,
                    },
                ),
                Bool(
                    false,
                    Span {
                        start: 237,
                        end: 248,
                        line: 9,
                        col: 3,
                    },
                ),
                U32(
                    42,
                    Span {
                        start: 252,
                        end: 259,
                        line: 10,
                        col: 3,
                    },
                ),
                I32(
                    -1,
                    Span {
                        start: 263,
                        end: 270,
                        line: 11,
                        col: 3,
                    },
                ),
                U64(
                    18446744073709551615,
                    Span {
                        start: 274,
                        end: 299,
                        line: 12,
                        col: 3,
                    },
                ),
                I64(
                    -9223372036854775808,
                    Span {
                        start: 303,
                        end: 328,
                        line: 13,
                        col: 3,
                    },
                ),
                U128(
                    "340282366920938463463374607431768211455",
                    Span {
                        start: 332,
                        end: 379,
                        line: 14,
                        col: 3,
                    },
                ),
                I128(
                    "-170141183460469231731687303715884105728",
                    Span {
                        start: 383,
                        end: 431,
                        line: 15,
                        col: 3,
                    },
                ),
                String(
                    "hello world",
                    Span {
                        start: 435,
                        end: 456,
                        line: 16,
                        col: 3,
                    },
                ),
                Symbol(
                    "transfer",
                    Span {
                        start: 460,
                        end: 478,
                        line: 17,
                        col: 3,
                    },
                ),
                Bytes(
                    "0xdeadbeef",
                    Span {
                        start: 482,
                        end: 501,
                        line: 18,
                        col: 3,
                    },
                ),
                Address(
                    "GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF",
                    Span {
                        start: 505,
                        end: 572,
                        line: 19,
                        col: 3,
                    },
                ),
                Address(
                    "CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABSC4",
                    Span {
                        start: 576,
                        end: 643,
                        line: 20,
                        col: 3,
                    },
                ),
                Vec(
                    [
                        U32(
                            1,
                            Span {
                                start: 651,
                                end: 657,
                                line: 21,
                                col: 7,
                            },
                        ),
                        U32(
                            2,
                            Span {
                                start: 659,
                                end: 665,
                                line: 21,
                                col: 15,
                            },
                        ),
                        U32(
                            3,
                            Span {
                                start: 667,
                                end: 673,
                                line: 21,
                                col: 23,
                            },
                        ),
                    ],
                    Span {
                        start: 647,
                        end: 674,
                        line: 21,
                        col: 3,
                    },
                ),
                Map(
                    [
                        MapEntry {
                            key: Symbol(
                                "name",
                                Span {
                                    start: 682,
                                    end: 696,
                                    line: 22,
                                    col: 7,
                                },
                            ),
                            value: String(
                                "Quasar",
                                Span {
                                    start: 700,
                                    end: 716,
                                    line: 22,
                                    col: 25,
                                },
                            ),
                        },
                    ],
                    Span {
                        start: 678,
                        end: 717,
                        line: 22,
                        col: 3,
                    },
                ),
            ],
            interface: None,
            span: Span {
                start: 147,
                end: 719,
                line: 7,
                col: 1,
            },
        },
    ],
}
